// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/openapi/openapi Array of date-time date array simple 1`] = `
{
  "info": {
    "contact": {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/health": {
      "get": {
        "description": "Service healthcheck endpoint",
        "operationId": "repeated",
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Healthcheck",
        "tags": [
          "Internals",
        ],
      },
    },
    "/test": {
      "get": {
        "description": "Test endpoint",
        "operationId": "id",
        "parameters": [
          {
            "description": "Parameter without description.",
            "in": "query",
            "name": "timestamps",
            "required": false,
            "schema": {
              "description": "Parameter without description.",
              "items": {
                "description": "Parameter without description. (min:10 chars, max:25 chars, date:yyyy-mm-dd)",
                "format": "date",
                "type": "string",
              },
              "type": "array",
            },
          },
        ],
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": [
          "Internals",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Array of date-time date-time array all options 1`] = `
{
  "info": {
    "contact": {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/health": {
      "get": {
        "description": "Service healthcheck endpoint",
        "operationId": "repeated",
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Healthcheck",
        "tags": [
          "Internals",
        ],
      },
    },
    "/test": {
      "get": {
        "description": "Test endpoint",
        "operationId": "id",
        "parameters": [
          {
            "description": "date-time array (minItems:1, maxItems:100)",
            "example": [
              "2020-10-14T22:12:53.065Z",
            ],
            "in": "query",
            "name": "timestamps",
            "required": true,
            "schema": {
              "default": [
                "2020-10-14T22:12:53.065Z",
                "2020-10-14T22:12:53.065Z",
              ],
              "description": "date-time array (minItems:1, maxItems:100)",
              "items": {
                "description": "ignore (max:25 chars, ISO8601 date-time format)",
                "format": "date-time",
                "type": "string",
              },
              "maxItems": 100,
              "minItems": 1,
              "nullable": true,
              "type": "array",
            },
          },
        ],
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": [
          "Internals",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Array of date-time date-time array simple 1`] = `
{
  "info": {
    "contact": {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/health": {
      "get": {
        "description": "Service healthcheck endpoint",
        "operationId": "repeated",
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Healthcheck",
        "tags": [
          "Internals",
        ],
      },
    },
    "/test": {
      "get": {
        "description": "Test endpoint",
        "operationId": "id",
        "parameters": [
          {
            "description": "Parameter without description.",
            "in": "query",
            "name": "timestamps",
            "required": false,
            "schema": {
              "description": "Parameter without description.",
              "items": {
                "description": "Parameter without description. (max:25 chars, ISO8601 date-time format)",
                "format": "date-time",
                "type": "string",
              },
              "type": "array",
            },
          },
        ],
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": [
          "Internals",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "https://server.com",
    },
  ],
}
`;
